--- a/HelloGL/HelloGL/HelloGL.vcxproj
+++ b/HelloGL/HelloGL/HelloGL.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="MeshLoader.h" />
     <ClInclude Include="SceneObject.h" />
     <ClInclude Include="Structures.h" />
+    <ClInclude Include="Texture2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cube.cpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MeshLoader.cpp" />
     <ClCompile Include="SceneObject.cpp" />
+    <ClCompile Include="Texture2D.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
