--- a/HelloGL/HelloGL/HelloGL.vcxproj.filters
+++ b/HelloGL/HelloGL/HelloGL.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Texture2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HelloGL.cpp">
